--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #54ddfe; }
+  background: #5c9107; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #06c2d6; }
+  background: #5b200e; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #72ff68; }
+  background: #d8d5f7; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #b9fee0; }
+  background: #acd0b3; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #5cb1cc; }
+  background: #b2d21e; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #9ed879; }
+  background: #cbf15c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #b8b0ea; }
+  background: #983020; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #0db6d2; }
+  background: #4915c2; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #deeeb0; }
+  background: #264ffc; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #cf9cce; }
+  background: #acd3de; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #6aaaa9; }
+  background: #311d53; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #371124; }
+  background: #d37dfd; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #97e98a; }
+  background: #188c5b; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7a59ae; }
+  background: #c0177f; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b44652; }
+  background: #253938; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #879d71; }
+  background: #c1da14; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #68b8ad; }
+  background: #0e88ff; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #0eaf8a; }
+  background: #562540; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #55a84e; }
+  background: #dae74c; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #91824d; }
+  background: #667b58; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #217f55; }
+  background: #72d544; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ef5a0b; }
+  background: #5ad7a2; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4e9d5a; }
+  background: #aae358; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #fba3d8; }
+  background: #5ed5dd; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #25ace9; }
+  background: #f803b3; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #96c094; }
+  background: #d38079; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a840b5; }
+  background: #4fe028; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b1c915; }
+  background: #37ef1b; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #2b4543; }
+  background: #2d4fcb; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #71b437; }
+  background: #9da9eb; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a27617; }
+  background: #9cfc27; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #39ef3d; }
+  background: #8652f4; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #77464b; }
+  background: #c53665; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #25b743; }
+  background: #3af02e; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b77556; }
+  background: #b4b3a4; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #6b9ff4; }
+  background: #8fff4e; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #9d9b4f; }
+  background: #3958e7; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #6a5719; }
+  background: #2796c5; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #d9a0cd; }
+  background: #85e4d2; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #59e7c2; }
+  background: #ec5af0; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a92539; }
+  background: #f63c0a; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #a470f5; }
+  background: #cbfb36; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #0bd12e; }
+  background: #5dcbcc; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #38a43a; }
+  background: #42b87b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9af792; }
+  background: #6065fa; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6c9bc4; }
+  background: #8c3be8; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #4b436b; }
+  background: #617e7f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #6187a8; }
+  background: #320308; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #886e1d; }
+  background: #6a4d69; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ebbd20; }
+  background: #5e6b8f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #7e8121; }
+  background: #ac9bbb; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #13c346; }
+  background: #0f393e; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #fb18af; }
+  background: #5bcc5a; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #cde323; }
+  background: #64ae18; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #dc3104; }
+  background: #6e6472; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #520408; }
+  background: #ffd0e5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a38e1f; }
+  background: #30b214; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #47a2ac; }
+  background: #5fd45e; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #03d7b6; }
+  background: #6d5c26; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #4f25a4; }
+  background: #12a899; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #c9852a; }
+  background: #2cf146; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #118620; }
+  background: #2d8bcf; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #749ebd; }
+  background: #f91998; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #35b12a; }
+  background: #79aeeb; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fe5747; }
+  background: #51a267; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #600a2b; }
+  background: #149bda; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #cf837a; }
+  background: #3ab008; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #313069; }
+  background: #cd494d; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #eef692; }
+  background: #dcf716; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #e18ef0; }
+  background: #6c9628; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #4080e0; }
+  background: #95b237; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #8d15b1; }
+  background: #5e7d91; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6aa737; }
+  background: #4a5463; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #03f9a4; }
+  background: #d176b2; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ca0b86; }
+  background: #5aaa9e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #26f71c; }
+  background: #077464; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #e3677a; }
+  background: #95428f; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #feb16a; }
+  background: #6eb31f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #8a4ddf; }
+  background: #849e1e; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #72c7ca; }
+  background: #73d5bd; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #c7984d; }
+  background: #b82b60; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #cd5503; }
+  background: #287c77; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a1290e; }
+  background: #368722; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #655d93; }
+  background: #244e31; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #0949fb; }
+  background: #8b6107; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #3d7149; }
+  background: #fb94b6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #0e12bb; }
+  background: #3506dd; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #e384e4; }
+  background: #1dda5f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a40c3d; }
+  background: #61e7e3; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #91dfe5; }
+  background: #810b94; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #bd66eb; }
+  background: #b8d7fd; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #f3b177; }
+  background: #0e3757; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #edf5ee; }
+  background: #1a7fa8; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #b7d8ff; }
+  background: #f5f4a3; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #3e1878; }
+  background: #33fd20; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #14e664; }
+  background: #2a840f; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0863e4; }
+  background: #57f3c0; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c530be; }
+  background: #12c4bc; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #03e569; }
+  background: #c86faf; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0ad093; }
+  background: #cd9f3b; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12271,17 +12271,18 @@ td .check-container {
     .connectors-box-wrapper .connec-box-div .box-logo a {
       display: inline-block;
       background: white;
-      width: 30px;
-      height: 30px;
+      width: 50px;
+      height: 50px;
       margin-right: 5px;
       margin-bottom: 10px;
       border: 1px solid #b1b1b1;
       border-radius: 100%;
       text-align: center;
       vertical-align: middle;
-      position: relative; }
+      position: relative;
+      margin-top: 15px; }
       .connectors-box-wrapper .connec-box-div .box-logo a img {
-        width: 20px;
+        width: 30px;
         margin: auto;
         position: absolute;
         left: 0;
@@ -12291,13 +12292,18 @@ td .check-container {
     .connectors-box-wrapper .connec-box-div .box-title {
       font-size: 18px;
       color: #212529;
-      margin-bottom: 30px; }
+      margin-bottom: 20px; }
     .connectors-box-wrapper .connec-box-div .box-content {
-      height: 50px; }
+      height: 50px;
+      font-size: 14px;
+      line-height: 18px;
+      padding-left: 10px;
+      padding-right: 10px; }
     .connectors-box-wrapper .connec-box-div .box-learnmore-btn {
       margin: 20px 0px; }
       .connectors-box-wrapper .connec-box-div .box-learnmore-btn a {
-        text-decoration: none; }
+        text-decoration: none;
+        font-size: 15px; }
     .connectors-box-wrapper .connec-box-div .box-bottom-bar {
       position: relative;
       position: relative;
@@ -12307,8 +12313,7 @@ td .check-container {
       border-top: 1px solid #b1b1b1; }
       .connectors-box-wrapper .connec-box-div .box-bottom-bar div {
         display: flex;
-        align-items: center;
-        padding-top: 10px; }
+        align-items: center; }
         .connectors-box-wrapper .connec-box-div .box-bottom-bar div span {
           margin-right: 5px; }
 
@@ -12331,13 +12336,19 @@ td .check-container {
     left: 0;
     height: 20px;
     width: 20px;
-    background-color: #eee;
+    background-color: #cdcdd6;
     border-radius: 50%;
-    border: 1px solid #776fff; }
-    .container-custom-checkbox .checkmark :after {
-      content: "";
-      position: absolute;
-      display: none; }
+    border: 1px solid #cdcdd6; }
+    .container-custom-checkbox .checkmark::after {
+      left: 6px;
+      top: 4px;
+      width: 5px;
+      height: 10px;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg); }
 
 /* Hide the browser's default checkbox */
 .container-custom-checkbox input {
@@ -12354,7 +12365,8 @@ td .check-container {
 
 /* When the checkbox is checked, add a blue background */
 .container-custom-checkbox input:checked ~ .checkmark {
-  background-color: #776fff; }
+  background-color: #776fff;
+  border: 1px solid #776fff; }
 
 /* Create the checkmark/indicator (hidden when not checked) */
 /* Show the checkmark when checked */
@@ -12372,6 +12384,25 @@ td .check-container {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg); }
+
+.field-check-box input[type="checkbox"] {
+  display: none; }
+
+.box-bottom-bar .remember {
+  margin-bottom: 0px; }
+
+.box-bottom-bar .field-check-box label {
+  color: #4c4c4c;
+  padding: 8px 0px;
+  font-size: 15px;
+  transition: all 0.3s ease-in-out 0s;
+  background: url(../images/disabled-check.png) no-repeat 0px center;
+  cursor: pointer;
+  padding-left: 35px;
+  margin-bottom: 0px !important; }
+
+.box-bottom-bar .field-check-box input[type="checkbox"]:checked + label {
+  background-image: url(../images/enable-check.png); }
 
 @media screen and (max-width: 767px) {
   .profile-box {
