--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -1847,8 +1847,8 @@ td {
       a {
         display: inline-block;
         background: white;
-        width: 30px;
-        height: 30px;
+        width: 50px;
+        height: 50px;
         margin-right: 5px;
         margin-bottom: 10px;
         border: 1px solid #b1b1b1;
@@ -1856,9 +1856,11 @@ td {
         text-align: center;
         vertical-align: middle;
         position: relative;
+        margin-top: 15px;
+
 
         img {
-          width: 20px;
+          width: 30px;
           margin: auto;
           position: absolute;
           left: 0;
@@ -1872,11 +1874,15 @@ td {
     .box-title {
       font-size: 18px;
       color: #212529;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
 
     .box-content {
       height: 50px;
+      font-size: 14px;
+      line-height: 18px;
+      padding-left: 10px;
+      padding-right: 10px;
     }
 
     .box-learnmore-btn {
@@ -1884,6 +1890,7 @@ td {
 
       a {
         text-decoration: none;
+        font-size: 15px;
       }
     }
 
@@ -1906,13 +1913,14 @@ td {
       div {
         display: flex;
         align-items: center;
-        padding-top: 10px;
+        // padding-top: 10px;
 
         span {
           margin-right: 5px;
         }
       }
     }
+
   }
 }
 
@@ -1936,14 +1944,27 @@ td {
     left: 0;
     height: 20px;
     width: 20px;
-    background-color: #eee;
+    background-color: #cdcdd6;
     border-radius: 50%;
-    border: 1px solid #776fff;
+    border: 1px solid #cdcdd6;
 
-    :after {
-      content: "";
-      position: absolute;
-      display: none;
+
+    // :after {
+    //   content: "";
+    //   position: absolute;
+    //   // display: none;
+    // }
+
+    &::after {
+      left: 6px;
+      top: 4px;
+      width: 5px;
+      height: 10px;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
     }
   }
 }
@@ -1967,6 +1988,7 @@ td {
 /* When the checkbox is checked, add a blue background */
 .container-custom-checkbox input:checked~.checkmark {
   background-color: #776fff;
+  border: 1px solid #776fff;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -1987,4 +2009,27 @@ td {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
+}
+
+.field-check-box input[type="checkbox"] {
+  display: none;
+}
+
+.box-bottom-bar .remember {
+  margin-bottom: 0px;
+}
+
+.box-bottom-bar .field-check-box label {
+  color: #4c4c4c;
+  padding: 8px 0px;
+  font-size: 15px;
+  transition: all 0.3s ease-in-out 0s;
+  background: url(../images/disabled-check.png) no-repeat 0px center;
+  cursor: pointer;
+  padding-left: 35px;
+  margin-bottom: 0px !important;
+}
+
+.box-bottom-bar .field-check-box input[type="checkbox"]:checked+label {
+  background-image: url(../images/enable-check.png);
 }
