text and logo update connectors new page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #5c9107; }
+  background: #da13ac; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5b200e; }
+  background: #24e9aa; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #d8d5f7; }
+  background: #d60510; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #acd0b3; }
+  background: #c1f298; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #b2d21e; }
+  background: #c96d9c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #cbf15c; }
+  background: #089cea; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #983020; }
+  background: #f06c62; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #4915c2; }
+  background: #dcd6bc; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #264ffc; }
+  background: #ee34ad; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #acd3de; }
+  background: #47f1f5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #311d53; }
+  background: #8a13da; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #d37dfd; }
+  background: #faa75f; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #188c5b; }
+  background: #f8d078; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #c0177f; }
+  background: #86c62f; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #253938; }
+  background: #68a13f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c1da14; }
+  background: #692360; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #0e88ff; }
+  background: #2e9b0e; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #562540; }
+  background: #a9f837; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #dae74c; }
+  background: #454fc2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #667b58; }
+  background: #94032d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #72d544; }
+  background: #ab125f; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #5ad7a2; }
+  background: #d301d2; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #aae358; }
+  background: #b31e0d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #5ed5dd; }
+  background: #768b2b; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f803b3; }
+  background: #e5d8d4; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #d38079; }
+  background: #0b0674; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #4fe028; }
+  background: #e67b7b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #37ef1b; }
+  background: #771bd4; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #2d4fcb; }
+  background: #e76507; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #9da9eb; }
+  background: #f26d25; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #9cfc27; }
+  background: #108196; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #8652f4; }
+  background: #863b63; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #c53665; }
+  background: #67493f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #3af02e; }
+  background: #9ceddf; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b4b3a4; }
+  background: #baeecc; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #8fff4e; }
+  background: #b2187a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #3958e7; }
+  background: #c738a6; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #2796c5; }
+  background: #ffb96e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #85e4d2; }
+  background: #48d072; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #ec5af0; }
+  background: #dbdd5a; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f63c0a; }
+  background: #123c72; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #cbfb36; }
+  background: #ae66aa; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #5dcbcc; }
+  background: #093dbe; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #42b87b; }
+  background: #29345c; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #6065fa; }
+  background: #36aa8f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #8c3be8; }
+  background: #dfa1b6; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #617e7f; }
+  background: #87ae8d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #320308; }
+  background: #dee886; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #6a4d69; }
+  background: #d08abb; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #5e6b8f; }
+  background: #f9f356; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ac9bbb; }
+  background: #014e76; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #0f393e; }
+  background: #892fe1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #5bcc5a; }
+  background: #70de27; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #64ae18; }
+  background: #26c8f3; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #6e6472; }
+  background: #2514ef; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #ffd0e5; }
+  background: #d67875; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #30b214; }
+  background: #3a6a5b; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #5fd45e; }
+  background: #47ac67; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #6d5c26; }
+  background: #ed6ec5; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #12a899; }
+  background: #d5f6cf; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #2cf146; }
+  background: #a3b72e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #2d8bcf; }
+  background: #8fe543; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #f91998; }
+  background: #d13c42; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #79aeeb; }
+  background: #883151; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #51a267; }
+  background: #b14610; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #149bda; }
+  background: #2c132c; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #3ab008; }
+  background: #6a348a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #cd494d; }
+  background: #f9aefc; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #dcf716; }
+  background: #634991; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #6c9628; }
+  background: #d570ac; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #95b237; }
+  background: #54cb94; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #5e7d91; }
+  background: #4916f0; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #4a5463; }
+  background: #ce3dfa; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d176b2; }
+  background: #f45ce8; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #5aaa9e; }
+  background: #598dc3; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #077464; }
+  background: #410838; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #95428f; }
+  background: #329bff; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #6eb31f; }
+  background: #da64f6; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #849e1e; }
+  background: #437dd5; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #73d5bd; }
+  background: #0704d6; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b82b60; }
+  background: #2180b3; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #287c77; }
+  background: #8953c2; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #368722; }
+  background: #1c3e5a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #244e31; }
+  background: #c2b7cb; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #8b6107; }
+  background: #13d6b5; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #fb94b6; }
+  background: #602998; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #3506dd; }
+  background: #67debb; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #1dda5f; }
+  background: #f9d675; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #61e7e3; }
+  background: #c57fd8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #810b94; }
+  background: #3590fa; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b8d7fd; }
+  background: #c01e7e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #0e3757; }
+  background: #1571ed; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #1a7fa8; }
+  background: #42c54d; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #f5f4a3; }
+  background: #b8610d; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #33fd20; }
+  background: #ad853e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #2a840f; }
+  background: #cb227b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #57f3c0; }
+  background: #bb9026; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #12c4bc; }
+  background: #43d971; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #c86faf; }
+  background: #1687ce; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #cd9f3b; }
+  background: #f9df92; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12302,7 +12302,6 @@ td .check-container {
     .connectors-box-wrapper .connec-box-div .box-learnmore-btn {
       margin: 20px 0px; }
       .connectors-box-wrapper .connec-box-div .box-learnmore-btn a {
-        text-decoration: none;
         font-size: 15px; }
     .connectors-box-wrapper .connec-box-div .box-bottom-bar {
       position: relative;
