--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #da13ac; }
+  background: #ab90e6; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #24e9aa; }
+  background: #2b0a5b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #d60510; }
+  background: #79029f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c1f298; }
+  background: #21f78e; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c96d9c; }
+  background: #19863e; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #089cea; }
+  background: #1524f9; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f06c62; }
+  background: #53c57b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #dcd6bc; }
+  background: #a68906; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #ee34ad; }
+  background: #17bf82; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #47f1f5; }
+  background: #d85874; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8a13da; }
+  background: #5e850d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #faa75f; }
+  background: #d7c2f9; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #f8d078; }
+  background: #e87f3c; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #86c62f; }
+  background: #4bcd89; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #68a13f; }
+  background: #bb733c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #692360; }
+  background: #121fa0; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #2e9b0e; }
+  background: #fdc5c7; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #a9f837; }
+  background: #c4ea46; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #454fc2; }
+  background: #eaf84f; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #94032d; }
+  background: #cc93bc; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #ab125f; }
+  background: #24147e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #d301d2; }
+  background: #73ce2a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b31e0d; }
+  background: #fb4fdf; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #768b2b; }
+  background: #13a59a; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e5d8d4; }
+  background: #649da8; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #0b0674; }
+  background: #815d1a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e67b7b; }
+  background: #0853a4; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #771bd4; }
+  background: #08ba74; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e76507; }
+  background: #721dc3; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f26d25; }
+  background: #5279cd; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #108196; }
+  background: #0c6701; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #863b63; }
+  background: #daa254; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #67493f; }
+  background: #362d9e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #9ceddf; }
+  background: #879c39; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #baeecc; }
+  background: #9dca37; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b2187a; }
+  background: #3dcaf5; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #c738a6; }
+  background: #81a54c; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ffb96e; }
+  background: #3e367f; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #48d072; }
+  background: #165a76; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #dbdd5a; }
+  background: #7260c2; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #123c72; }
+  background: #907119; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #ae66aa; }
+  background: #da0ed7; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #093dbe; }
+  background: #31b54c; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #29345c; }
+  background: #5de93d; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #36aa8f; }
+  background: #111a13; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #dfa1b6; }
+  background: #20f83d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #87ae8d; }
+  background: #22ec6b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #dee886; }
+  background: #bd253b; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #d08abb; }
+  background: #8a8369; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #f9f356; }
+  background: #feeae1; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #014e76; }
+  background: #ccd9ff; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #892fe1; }
+  background: #4e3bcf; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #70de27; }
+  background: #cc2f40; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #26c8f3; }
+  background: #3e8b9e; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #2514ef; }
+  background: #924178; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #d67875; }
+  background: #768dba; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #3a6a5b; }
+  background: #b852c4; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #47ac67; }
+  background: #e4b5b0; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #ed6ec5; }
+  background: #6b2526; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #d5f6cf; }
+  background: #3b599e; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a3b72e; }
+  background: #0620cb; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #8fe543; }
+  background: #e60832; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #d13c42; }
+  background: #d042af; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #883151; }
+  background: #8fff9f; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b14610; }
+  background: #5d60fe; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #2c132c; }
+  background: #acf1d8; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6a348a; }
+  background: #027eca; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #f9aefc; }
+  background: #6c6428; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #634991; }
+  background: #b576e2; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d570ac; }
+  background: #ec5d31; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #54cb94; }
+  background: #dd9f9c; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #4916f0; }
+  background: #d50a12; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #ce3dfa; }
+  background: #460604; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f45ce8; }
+  background: #36d6b0; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #598dc3; }
+  background: #ff52dc; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #410838; }
+  background: #6f70a1; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #329bff; }
+  background: #2e0b94; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #da64f6; }
+  background: #a9b1fe; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #437dd5; }
+  background: #cdd267; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0704d6; }
+  background: #b740b8; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #2180b3; }
+  background: #4c5364; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8953c2; }
+  background: #996cce; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #1c3e5a; }
+  background: #dbf78c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c2b7cb; }
+  background: #de3ba3; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #13d6b5; }
+  background: #7a02b8; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #602998; }
+  background: #191c63; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #67debb; }
+  background: #8494ab; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #f9d675; }
+  background: #e45b9b; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c57fd8; }
+  background: #66b16e; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #3590fa; }
+  background: #5f648a; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #c01e7e; }
+  background: #1107ff; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #1571ed; }
+  background: #f09c41; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #42c54d; }
+  background: #19d47c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #b8610d; }
+  background: #9728c3; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #ad853e; }
+  background: #2cbe26; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #cb227b; }
+  background: #d57346; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #bb9026; }
+  background: #dd8f8e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #43d971; }
+  background: #2174aa; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #1687ce; }
+  background: #0c24a9; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #f9df92; }
+  background: #afc8d2; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11911,6 +11911,21 @@ input:checked + .sliders:before {
   background: #776fff !important;
   border: 2px solid #776fff !important;
   color: #fff !important; }
+
+.full-search-row form {
+  width: 100%; }
+  .full-search-row form .search-icon-btn {
+    position: absolute;
+    background: none;
+    background-image: url(../images/search.svg);
+    background-repeat: no-repeat;
+    background-position-x: 12px;
+    background-position-y: 13px;
+    width: auto;
+    top: -2px;
+    left: 0px;
+    margin: 0px;
+    z-index: 3; }
 
 .policy-search .search-wrap-standard::before {
   display: none; }
