--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -1376,7 +1376,7 @@ input:checked+.sliders:before {
       left: 0px;
       margin: 0px;
       z-index: 3;
-
+      border: 0px solid #cdcdd6;
     }
   }
 }
